tests/ui/fail/derive/enum-undefined-resource.stderr
error: missing l10n resource either on the enum or this variant
 --> tests/ui/fail/derive/enum-undefined-resource.rs:9:7
  |
9 |     #[l10n_message("state.online")]
  |       ^^^^^^^^^^^^
